# faststream-bug

./: pyproject.toml
my_package/: main.py
